# analog-hawking-radiation

./: .dockerignore  .gitignore  .mailmap  .pre-commit-config.yaml  2e3e73de-bed2-41a2-b74b-a00678c80cd1.md  404.html  AnaBHEL_Analog_Black_Hole_Evaporation_via_Lasers_E.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_UNCERTAINTY_BUDGET.md  CONTRIBUTING.md  CONTRIBUTORS.md  CORRELATION_ANALYSIS_FIX_SUMMARY.md  DETECTION_FEASIBILITY_QUICK_SUMMARY.md  Dockerfile  Dockerfile.cpu  Dockerfile.cuda  ELI_Validation_Summary.md  ENHANCEMENT_COMPLETION.md  ENHANCEMENT_VALIDATION_REPORT.md  EPISTEMIC_HONESTY_OVERHAUL.md  EXPERIMENTAL_VALIDATION_STATUS.md  GLOW_VISUALIZATIONS_README.md  HONESTY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NEXT_KIMI_PROMPT.md  NEXT_STEPS.md  PROFESSIONAL_README.md  PUBLICATION_PIPELINE_DELIVERABLES.md  PUBLIC_RELEASE_CHECKLIST.md  PUBLIC_RELEASE_PREP.md  PUBLIC_RELEASE_SUMMARY.md  README.md  README_NEW.md  README_OUTLINE.md  RELEASE_NOTES_v0.3.0.md  (+49 more)
.github/: pull_request_template.md
.matplotlib/: fontlist-v390.json
analysis/: analyze_trans_planckian_spectrum.py  blackbody_fitter.py  find_best_params.py  parameter_optimizer.py  spectrum_analyzer.py  validation_tester.py
api_reference/: index.html
configs/: 3d_simulation.yml  eli_alps_config.yaml  eli_beamlines_config.yaml  eli_beamlines_configs.json  eli_beamlines_sweep.json  eli_np_config.yaml  fluctuation_seeding.yml  thresholds.yaml  trans_planckian_enhancements.yml  trans_planckian_mock.yml  warpx_mock.json
docs/: AUDIT_NOTES.md  AdvancedScenarios.md  AnaBHEL_Comparison.md  Benchmarks.md  CLI.md  Docker.md  ELI_Experimental_Planning_Guide.md  Enhanced_Physics_Models_Documentation.md  ExperimentalAccessibility.md  Final_Answer.md  GALLERY.md  GPU_ACCELERATION_GUIDE.md  Glossary.md  GradientCatastropheAnalysis.md  GradientCatastropheFindings.md  Highlights_v0.2.0.md  IMAGES_OVERVIEW.md  IMAGES_README.md  Limitations.md  Methods.md  Overview.md  QUICKLINKS.md  README.md  REFERENCES.md  Regression.md  Results.md  Successful_Configurations.md  TECHNICAL_REVIEW_2025.md  Tutorials.md  Validation.md  advanced_simulations.md  api_reference.md  enhanced_parameter_generation_documentation.md  enhanced_validation.md  horizon_nd.md  index.md  installation.md  integration_testing_report.md  launch_readiness_plan.md  methodology.md  (+5 more)
examples/: create_glow_visualizations.py  create_researcher_visualizations.py  realistic_feasibility.py  test_anabhel_digital_twin.py
examples_drafts/: create_glow_visualizations.py  create_researcher_visualizations.py
experiments/: bayesian_optimized_setup.py
goldens/: quickstart_horizons.json
honest_archive/: index.html
installation/: index.html
outreach/: README.md
paper/: README_ancillary.txt  audit_summary.md  main.tex  refs.bib  requirements.txt
peer_review_simulations/: peer_review_test_20251106_190330_Physical_Review_Letters.json  review_report_test_20251106_190330_Physical_Review_Letters.md
physics_engine/: horizon.py  multi_beam_superposition.py  simulation.py
protocols/: experimental_protocol.md  inputs_downramp_1d.in
publications/: pipeline_summary.json  pipeline_summary.md
reports/: eli_compatibility_report_20251106_194022.json  eli_compatibility_report_20251106_194022.yaml  index.html  test_validation.json
results/: bayesian_optimization_trace.json  enhancement_stats.json  extended_param_sweep.json  final_confidence_metrics.json  fluctuation_validation.json  formation_frontier.json  full_pipeline_summary.json  geometry_vs_kappa.json  hawking_confidence.txt  horizon_probability_bands.json  horizon_simulation_results.json  horizon_success_cases.json  horizon_summary.json  param_sweep_summary.json  parameter_optimization_20251011_155632.json  parameter_optimization_20251011_155645.json  parameter_optimization_20251011_155710.json  plasma_params.json  pulse_shape.h5  smilei_results.json  validation_results.json  validation_results_20251011_155627.json  warpx_profiles.npz
scripts/: README.md  analyze_cs_profile_impact.py  analyze_significance.py  bayesian_optimization.py  build_results_pack.py  build_success_docs.py  compare_hybrid_apples_to_apples.py  comprehensive_detection_feasibility_analysis.py  comprehensive_eli_facility_validator.py  comprehensive_monte_carlo_uncertainty.py  compute_formation_frontier.py  convergence_detector.py  correlation_map.py  demo_hybrid_comparison.py  enhanced_analysis_pipeline.py  enhanced_eli_parameter_generator.py  enhanced_parameter_generator.py  experiment_hybrid_onoff.py  experiment_kappa_inference_benchmark.py  experiment_tracker.py  experiment_universality_collapse.py  generate_detection_time_heatmap.py  generate_eli_compatibility_reports.py  generate_guidance_map.py  generate_paramspace_maps.py  generate_radio_snr_sweep.py  generate_synthetic_nd_h5.py  generate_synthetic_openpmd_slice.py  generate_workflow_diagram.py  geometry_optimize_kappa.py  hawking_detection_experiment.py  infer_kappa_from_psd.py  make_comparison_figures.py  make_demo_bundle.py  make_results_pack.py  manage_configs.py  moe_orchestrated_sweep.py  monte_carlo_horizon_uncertainty.py  openpmd_slice_to_profile.py  openpmd_to_grid_nd.py  (+44 more)
search/: search_index.json
tests/: conftest.py  integration_test.py  test_adaptive_sigma.py  test_cli_gpu_info.py  test_cli_quickstart.py  test_cli_regress.py  test_doc_sync.py  test_eli_compatibility_system.py  test_enhanced_coupling.py  test_experiment_universality.py  test_frequency_gating_boundary.py  test_gpu_parity_graybody.py  test_graybody.py  test_graybody_acoustic_wkb.py  test_graybody_dimensionless.py  test_graybody_fallback_and_single_application.py  test_horizon_kappa_analytic.py  test_horizon_nd.py  test_hybrid_basic.py  test_multi_physics_coupling.py  test_nd_aggregator.py  test_openpmd_slice_to_profile.py  test_physics_validators.py  test_pic_pipeline.py  test_pic_units.py  test_pipeline_cli_flags.py  test_planck_rj_limit.py  test_psd_scaling.py  test_radiometer_sanity.py  (+2 more)
(+354 files in other folders)
