[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "analog-hawking-radiation"
description = "A computational framework for simulating analog Hawking radiation in laser-plasma systems"
readme = "README.md"
authors = [{name = "Hunter Bown", email = "hunter@shannonlabs.dev"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.8",
    "matplotlib>=3.6",
    "h5py>=3.8",
    "emcee>=3.1",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "nbconvert",
    "jupyter",
    "ipykernel",
]

[project.urls]
Homepage = "https://github.com/hmbown/analog-hawking-radiation"
Repository = "https://github.com/hmbown/analog-hawking-radiation"
"Bug Tracker" = "https://github.com/hmbown/analog-hawking-radiation/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["src/"]
omit = ["*/tests/*"]