[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "analog-hawking-radiation"
description = "A computational framework for simulating analog Hawking radiation in laser-plasma systems"
readme = "README.md"
authors = [{name = "Hunter Bown", email = "hunter@shannonlabs.dev"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.8",
    "matplotlib>=3.6",
    "h5py>=3.8",
    "emcee>=3.1",
    "PyYAML>=6.0",
    "pandas>=1.5",
    "seaborn>=0.12",
    "psutil>=5.9",
    "rich>=13.0",
    "scikit-optimize>=0.9.0",
    "scikit-learn>=1.1",
    "pydantic>=2.5",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "nbconvert",
    "jupyter",
    "ipykernel",
    "ruff>=0.5.0",
    "black>=23.0",
    "pre-commit>=3.7",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
gpu = [
    # Prefer CUDA 12 wheels on Linux; users may switch to a specific variant
    "cupy-cuda12x>=12.2; platform_system=='Linux'",
]
accel = [
    "numba>=0.60",
]

[project.urls]
Homepage = "https://github.com/hmbown/analog-hawking-radiation"
Repository = "https://github.com/hmbown/analog-hawking-radiation"
"Bug Tracker" = "https://github.com/hmbown/analog-hawking-radiation/issues"

[project.scripts]
ahr = "analog_hawking.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["src/"]
omit = ["*/tests/*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E203",  # whitespace before ':' (black compatible)
    "E266",  # too many leading '#' for block comment
    "E501",  # line too long (handled by black)
]
fix = false
src = ["src", "scripts", "tests"]
